--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,119 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+	font-family: monospace;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+	height: 100vh;
+	margin: 0;
+	padding: 0;
+}
+
+p {
+	margin: 0;
+}
+
+.project-name {
+    font-size: 1.5rem;
+}
+
+.container {
+	width: 100%;
+	max-width: 1080px;
+	margin: 0 auto;
+    padding: 1rem;
+}
+
+#root {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #000000;
+}
+
+.projects-list-el {
+	border: 1px solid #00ff00;
+}
+
+.projects-list-el-inner {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+	gap: 1rem;
+}
+
+.projects-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+	color: #00ff00;
+}
+
+.projects-list-el {
+    width: calc(100% / 3 - 1rem);
+	flex-grow: 1;
+}
+
+.btn {
+    display: inline-block;
+    padding:  .5rem 1rem;
+    border:  1px solid #00ff00;
+    color:  #00ff00;
+    text-decoration: none;
+}
+
+.buttons-holder {
+    display: flex;
+    gap: 1rem;
+}
+
+
+
+.btn {
+    display: inline-block;
+    padding:  .5rem 1rem;
+    border:  1px solid #00ff00;
+    color:  #00ff00;
+    text-decoration: none;
+}
+
+.buttons-holder {
+    display: flex;
+    gap: 1rem;
+}
+
+.label {
+    padding: .25rem 1rem;
+    border-radius: 1rem;
+    background: #00ff00;
+    color: #000000;
+    font-weight: 700;
+}
+
+.techs-holder {
+    display: flex;
+    align-items: start;
+    flex-wrap: wrap;
+    gap: .5rem;
+}
+
+
+
+
+@media (max-width: 900px) {
+    .projects-list-el {
+        width: 100%;
+        flex: 0 1 calc(100% / 2 - 1rem);
+    }
+}
+
+@media (max-width: 600px) {
+    #root {
+        align-items: flex-start;
+    }
+
+    .projects-list-el {
+        width: 100%;
+        flex: 1 1 100%;
+    }
 }
