--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+
+:root {
+  --primary: #000000;
+  --white: #ffffff;
+}
+
 * {
 	font-family: monospace;
 }
@@ -8,31 +14,36 @@ body {
 	padding: 0;
 }
 
-p {
-	margin: 0;
-}
-
-.project-name {
-    font-size: 1.5rem;
-}
-
-.container {
-	width: 100%;
-	max-width: 1080px;
-	margin: 0 auto;
-    padding: 1rem;
-}
-
 #root {
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #000000;
+    background: var(--white);
+}
+
+.container {
+    width: 100%;
+    max-width: 1080px;
+    margin: 0 auto;
+    padding: 1rem;
+}
+
+
+
+p {
+	margin: 0;
+}
+
+
+
+.project-name {
+    font-size: 1.5rem;
 }
 
 .projects-list-el {
-	border: 1px solid #00ff00;
+	border: 1px solid var(--primary);
+    transition: .3s ease-out;
 }
 
 .projects-list-el-inner {
@@ -46,47 +57,15 @@ p {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
-	color: #00ff00;
+	color: var(--primary);
 }
 
 .projects-list-el {
     width: calc(100% / 3 - 1rem);
 }
 
-.btn {
-    display: inline-block;
-    padding:  .5rem 1rem;
-    border:  1px solid #00ff00;
-    color:  #00ff00;
-    text-decoration: none;
-}
-
-.buttons-holder {
-    display: flex;
-    gap: 1rem;
-}
-
-
-
-.btn {
-    display: inline-block;
-    padding:  .5rem 1rem;
-    border:  1px solid #00ff00;
-    color:  #00ff00;
-    text-decoration: none;
-}
-
-.buttons-holder {
-    display: flex;
-    gap: 1rem;
-}
-
-.label {
-    padding: .25rem 1rem;
-    border-radius: 1rem;
-    background: #00ff00;
-    color: #000000;
-    font-weight: 700;
+.urls-holder-name {
+    margin-bottom: 0.5rem;
 }
 
 .techs-holder {
@@ -98,15 +77,60 @@ p {
 
 
 
+.btn {
+    display: inline-block;
+    padding:  .5rem 1rem;
+    border:  1px solid var(--primary);
+    color:  var(--primary);
+    text-decoration: none;
+}
 
-@media (max-width: 900px) {
+.buttons-holder {
+    display: flex;
+    gap: 1rem;
+}
+
+
+
+.btn {
+    display: inline-block;
+    padding:  .5rem 1rem;
+    border:  1px solid var(--primary);
+    color:  var(--primary);
+    text-decoration: none;
+    transition: .3s ease-out;
+}
+
+.btn:hover {
+    color:  var(--white);
+    background: var(--primary);
+}
+
+.buttons-holder {
+    display: flex;
+    gap: 1rem;
+}
+
+
+
+.label {
+    padding: .25rem 1rem;
+    border-radius: 1rem;
+    background: var(--primary);
+    color: var(--white);
+    font-weight: 700;
+}
+
+
+
+@media (max-width: 1080px) {
     .projects-list-el {
         width: 100%;
         flex: 0 1 calc(100% / 2 - 1rem);
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 690px) {
     #root {
         align-items: flex-start;
     }
